bug squashed

--- a/style.css
+++ b/style.css
@@ -13,10 +13,11 @@ body {
   left: 2vw; */
   /* height: 50vh;
     width: 6vw; */
-  box-shadow: 0px 0px 15px black;
+  /* box-shadow: 0px 0px 15px black; */
   border-radius: 10px;
   display: flex;
   flex-direction: column;
+  background-color: grey;
   z-index: 100;
 }
 button {
@@ -71,6 +72,7 @@ button {
 
 #canvas {
   position: relative;
+  box-sizing: border-box;
   border: 2px solid red;
   background-color: white;
   /* z-index: -1; */
